# CSPBridge

./: .gitignore  CLAUDE.md  LICENSE  README.md  copy_to_plugin.py  effects.json  ensure_csp_filterplugin.ps1  inst.ps1  meson.build  meson_options.txt
.claude/agents/: plugin-image-engineer.md  project-lead-reviewer.md
.github/: FUNDING.yml
CSPBridgeBase/: BridgeBase.cpp  BridgeBase.h  BridgeCallback.cpp  BridgeFilter.cpp  BridgeProperty.cpp  BridgeProperty.h  CSPBridgeBase.rc  CSPBridgeBase.sln  CSPBridgeBase.vcxproj  CSPBridgeBase.vcxproj.filters  framework.h  resource.h
CSPBridgeBase/CSPBridgeBase/x64/Debug/: CSPBridgeBase.dll.recipe  CSPBridgeBase.ilk  CSPBridgeBase.res  vc145.idb
CSPBridgeBase/CSPBridgeBase/x64/Debug/CSPBridgeBase.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSPBridgeBase.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
CSPBridgeBase/x64/Debug/: CSPBridgeBase.exp  CSPBridgeBase.lib
CSPBridgeEffects/: CSPBridgeEffects.csproj  meson.build
CSPBridgeEffects.Tests/: BlurKernelTests.cs  CSPBridgeEffects.Tests.csproj  HsvKernelTests.cs  KernelUtilsTests.cs  MosaicKernelTests.cs  SharpenKernelTests.cs
CSPBridgeEffects/Effects/: EffectHelper.cs  EffectMeta.cs.in  EffectTemplate.cs.in
CSPBridgeEffects/Effects/Kernels/: BlurKernel.cs  HsvKernel.cs  KernelUtils.cs  MosaicKernel.cs  SharpenKernel.cs
CSPBridgeEffects/Effects/Samples/: Blur.cs  HSV.cs  Mosaic.cs  SamplesMeta.cs  Sharpen.cs
docs/: CSPBridge_part2.md  README_en.md  require_spec_sheet_v2.md  roadmap-blur-sharpen-mosaic.md  spec_sheet.md  spec_v2.md
docs/archived/: ts_quickjs_investigation.md
scripts/: copy_to_plugin.py  make_release_zip.py
